# screenruster-saver-laughing_man

./: Cargo.toml  README.md
assets/shaders/blur/: fragment.glsl  vertex.glsl
assets/shaders/composite/: fragment.glsl
assets/shaders/image/: fragment.glsl  vertex.glsl
assets/shaders/plain/: fragment.glsl  vertex.glsl
src/: config.rs  lib.rs  main.rs  saver.rs  scene.rs
