[package]
name    = "screenruster-saver-laughing_man"
version = "0.2.0"
edition = "2018"

authors = ["meh. <meh@schizofreni.co>"]
license = "GPL-3.0"

description = "Ghost in the Shell inspired screen saver for ScreenRuster."
repository  = "https://github.com/meh/screenruster-saver-laughing_man"
keywords    = ["saver", "screenruster", "x11"]

[dependencies]
nalgebra = "0.19"
screen = { package = "screenruster-saver", version = "0.2", path = "../saver" }
